vanilla-minecraft/fabric-vanilla-mc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-vanilla-minecraft-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: fabric-vanilla-minecraft
  template:
    metadata:
      labels:
        app: fabric-vanilla-minecraft
    spec:
      containers:
        - name: fabric-vanilla-minecraft
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
          resources:
            requests:
              memory: "5Gi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /data
              name: fabric-vanilla-minecraft-data
        - name: fabric-vanilla-minecraft-backups
          image: itzg/mc-backup
          #imagePullPolicy: Never
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /data
              name: fabric-vanilla-minecraft-data
              readOnly: true
            - mountPath: /backups
              name: fabric-vanilla-minecraft-backups
      volumes:
        - name: fabric-vanilla-minecraft-data
          persistentVolumeClaim:
            claimName: fabric-vanilla-minecraft-pvc
        - name: fabric-vanilla-minecraft-backups
          persistentVolumeClaim:
            claimName: fabric-vanilla-minecraft-backups-pvc
        - name: fabric-vanilla-discordconfig
          secret:
            secretName: fabric-vanilla-discordconfig-secret
---
apiVersion: v1
kind: Service
metadata:
  name: fabric-vanilla-minecraft-service
spec:
  type: NodePort
  selector:
    app: fabric-vanilla-minecraft
  ports:
    - name: game
      protocol: TCP
      port: 25565
      targetPort: 25565
      nodePort: 30004
    - name: dynmap
      protocol: TCP
      port: 8123
      targetPort: 8123
