vanilla-minecraft/vanilla-mc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanilla-minecraft-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vanilla-minecraft
  template:
    metadata:
      labels:
        app: vanilla-minecraft
    spec:
      containers:
        - name: vanilla-minecraft
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
          resources:
            requests:
              memory: "2.5Gi"
              cpu: "1000m"
            limits:
              memory: "2.5Gi"
          volumeMounts:
            - mountPath: /data
              name: vanilla-minecraft-data
        - name: vanilla-minecraft-backups
          image: itzg/mc-backup
          #imagePullPolicy: Never
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /data
              name: vanilla-minecraft-data
              readOnly: true
            - mountPath: /backups
              name: vanilla-minecraft-backups
      volumes:
        - name: vanilla-minecraft-data
          persistentVolumeClaim:
            claimName: vanilla-minecraft-pvc
        - name: vanilla-minecraft-backups
          persistentVolumeClaim:
            claimName: vanilla-minecraft-backups-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vanilla-minecraft-service
spec:
  type: NodePort
  selector:
    app: vanilla-minecraft
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
      nodePort: 30001
