vanilla-minecraft/fabric-vanilla-dynmap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fabric-vanilla-minecraft-dynmap-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: vanilla-map.borsje.co.nz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fabric-vanilla-minecraft-server
            port:
              number: 8123
